test: 변경된 서비스에 대해 테스트 수정